--- a/Css/style.css
+++ b/Css/style.css
@@ -44,7 +44,10 @@ h1,h2,h3,h4,h5,h6{
 	  max-width:16vw;
 	  max-height:20vh; 	
 	}
-
+	.Item_Pic:hover .Text{
+  		opacity:1;
+  		visibility: visible;
+	}
 	.Display{
 		background-color:#304b78;
 		margin-top: 1%;
