--- a/Css/style.css
+++ b/Css/style.css
@@ -1,82 +1,114 @@
-/*Basic Stuff*/
-.Responsive_image {
-  max-width: 23vw;
-  height: auto;
-  max-height:49.2vh; 	
-  margin-top: 3%;
-}
-h1,h2,h3,h4,h5,h6{
-	text-align: center;
-}
-.font_Medium{
-	font-size: 4vh;
-}
-.font_Little{
-	font-size: 3vh;
-}
+	/*Basic Stuff*/
+	.Responsive_image {
+      border-radius:5px;
+	  max-width: 23vw;
+	  height: auto;
+	  max-height:49.2vh; 	
+	  margin-top: 3%;
+	}
+	h1,h2,h3,h4,h5,h6{
+		text-align: center;
+	}
+	.font_Medium{
+		font-size: 4vh;
+	}
+	.font_Little{
+		font-size: 3vh;
+	}
 
-/*Title Part*/
-.title_Bar{
-	font-size:25px;
-	background-color: #304b78;
-}
-.Tool_Bar{
-	font-size:15px;
-	background-color: #dbb13b;
-	margin-left: 4%;
-	margin-top:2px;
-	border-style:hidden;
-	border-width: 2px;
-}
-.title_Bar, .Tool_Bar{
-	color:white;
-	text-align: center;
-}
-/*Menu Part*/
-.Menu_base{
-	background-color:#2494a2;
-	height:auto;
-}
-.qtn{
-	width:30%;
-}
-.Total{
-	width:30%;
-	margin-left:18.4%;
-}
-.Search_Input{
-	margin-left:21.5%;
-	width:50%;
-	height:3.5vh;
-}
-.Search_Button{	
-	height:5vh;
-}
-.Buy{
-	margin-left:40%;
-}
+	.Line{
+		border-bottom-style: solid;
+		border-color:#5E92AD;
+		border-radius: 200px;
+	}
+
+	/*Title Part*/
+	.title_Bar{
+		color:white;
+		font-size:25px;
+		background-color: #60A1AA;
+	}
+	.Tool_Bar{
+		font-size:15px;
+		background-color: #8FC9D1;
+		margin-left: 8%;
+		border-style:hidden;
+		border-width: 2px;
+	}
+	.title_Bar, .Tool_Bar{
+		color:white;
+		text-align: center;
+		border-bottom-left-radius:200px;
+		border-bottom-right-radius:200px;
+	}
+
+	/*Menu Part*/
+	.Menu_base{
+		height:auto;
+	}
+	.qtn{
+		width:30%;
+	}
+	.Total{
+		width:30%;	
+		margin-left:18.4%;
+	}
+	.Search_Input{
+		border-style:solid;
+		border-color:#5E92AD;
+		border-radius:5px;
+		margin-left:23%;
+		width:50%;
+		height:3.5vh;
+	}
+	.Search_Button{
+		color: #5E92AD;
+		border-color:#5E92AD;
+		background-color:#ffffff;	
+		margin-left: 1%;
+		border-style:solid;
+		border-radius:5px;
+		height:5vh;
+	}
+	.Search_Button:hover{	
+		color: white;
+		border-color:#5E92AD;
+		background-color:#5E92AD;
+		margin-left: 1%;
+		border-style:solid;
+		border-radius:5px;
+		height:5vh;
+	}
+	.Buy{
+		margin-left:40%;
+	}
 
 /*Display For Phone*/
 @media only screen and (min-width: 0px) and (max-width: 767px) {
 	.Responsive_pic {
 	  max-width:16vw;
 	  max-height:20vh; 	
+      border-radius:5px;
 	}
 	.Item_Pic:hover .Text{
   		opacity:1;
   		visibility: visible;
 	}
 	.Display{
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		margin-top: 1%;
 	    margin-bottom: 1%;
-	  	margin-left: 10%;
-	  	width:80%;
+	  	margin-left: 7.75%;
+	  	width:85%;
 	  	height:auto;
 	  	text-align: center;
 	}
 	.Itens_Base_Search{
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		margin-top: 10px;
 		margin-bottom: 10px;
 		margin-right: 2%;
@@ -87,7 +119,6 @@ h1,h2,h3,h4,h5,h6{
 	.Itens_Base_Search .Item_Pic{
 		position: relative; 
 		display: inline-block;
-		background-color:#2494a2;
 		margin-top: 2%;
 		margin-bottom: 5px;
 		margin-right: 2vw;
@@ -97,29 +128,31 @@ h1,h2,h3,h4,h5,h6{
 		max-width:20%;
 	}
 	.Itens_Base{
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		margin-top: 10px;
 		margin-bottom: 10px;
 		margin-right: 2%;
-		margin-left: 10%;
-		max-width:80%;
+		margin-left: 7.75%;
+		max-width:85%;
 		text-align: center;
 	}
 
 	.Itens_Base .Item_Pic{
 		position: relative; 
 		display: inline-block;
-		background-color:#2494a2;
 		margin-top: 2%;
 		margin-bottom: 5px;
 		margin-right: 1vw;
-		margin-left: 5vw;
+		margin-left: 3vw;
 		max-width:16vw;
 	  	max-height:24vh;  
-		max-width:20%;
 	}
 	.Product{
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		margin-top: 10px;
 		margin-bottom: 10px;
 		margin-left: 10%;
@@ -128,14 +161,12 @@ h1,h2,h3,h4,h5,h6{
 		width:61.5vw;		
 	}
 	.Product .Product_Info{
-		color:white;
 		margin-left: 1vw;
 		margin-right: 1vw;
 		margin-bottom:3vh;
 		text-align: left;
 	}
 	.Product .Product_Buy{
-		color:white;
 		margin-left: 1vw;
 		margin-right: 1vw;
 		margin-bottom:3vh;
@@ -143,7 +174,8 @@ h1,h2,h3,h4,h5,h6{
 	}
 
 	.Footer{
-		position: sticky;
+		border-top-right-radius:20px;
+		border-top-left-radius:20px;
 		background-color:#2494a2;
 		margin-top:10%;
 		height:24vh;
@@ -155,7 +187,7 @@ h1,h2,h3,h4,h5,h6{
 	.Responsive_pic {
 	  max-width: 10vw;
 	  max-height:20vh; 
-      z-index:2;	
+      border-radius:5px;
 	}
 
 	.Item_Pic:hover .Text{
@@ -165,7 +197,8 @@ h1,h2,h3,h4,h5,h6{
 
 	.Display{
 		float:left;
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
 		margin-top: 10px;
 	    margin-bottom: 10px;
 	 	margin-right: 15px;
@@ -173,10 +206,13 @@ h1,h2,h3,h4,h5,h6{
 	  	width:25vw;
 	  	height:auto;
 	  	text-align: center;
+	  	border-radius:5px;
 	}
 
 	.Itens_Base_Search{
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		margin-top: 10px;
 		margin-bottom: 10px;
 		margin-right: 2%;
@@ -187,7 +223,6 @@ h1,h2,h3,h4,h5,h6{
 	.Itens_Base_Search .Item_Pic{
 		position: relative; 
 		display: inline-block;
-		background-color:#2494a2;
 		margin-top: 5px;
 		margin-bottom: 5px;
 		margin-right: 1vw;
@@ -197,18 +232,19 @@ h1,h2,h3,h4,h5,h6{
 	}
 	.Itens_Base{
 		float:right;
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
 		margin-top: 10px;
 		margin-bottom: 10px;
-		margin-right: 2%;
-		max-width:61%;
+		margin-right: -1%;
+		max-width:64%;
 		text-align: center;
+		border-radius:5px;
 	}
 
 	.Itens_Base .Item_Pic{
 		position: relative; 
 		display: inline-table;
-		background-color:#2494a2;
 		margin-top: 5px;
 		margin-bottom: 5px;
 		margin-right: 1vw;
@@ -218,8 +254,12 @@ h1,h2,h3,h4,h5,h6{
 	}
 
 	.Product{
+		border-style:solid;
+		border-color:#39A7B5;
+		border-radius:5px;
 		float:right;
-		background-color:#304b78;
+		border-style:solid;
+		border-color:#39A7B5;
 		margin-top: 10px;
 		margin-bottom: 10px;
 		display:inline-block;
@@ -227,7 +267,6 @@ h1,h2,h3,h4,h5,h6{
 		width:47vw;		
 	}
 	.Product .Product_Info{
-		color:white;
 		float:left;
 		margin-left: 1vw;
 		margin-right: 1vw;
@@ -235,7 +274,6 @@ h1,h2,h3,h4,h5,h6{
 		text-align: left;
 	}
 	.Product .Product_Buy{
-		color:white;
 		float:right;
 		margin-right: 1vw;
 		margin-bottom:3vh;
@@ -243,7 +281,8 @@ h1,h2,h3,h4,h5,h6{
 	}
 
 	.Footer{
-		position: sticky;
+		border-top-right-radius:20px;
+		border-top-left-radius:20px;
 		background-color:#2494a2;
 		margin-top:20vh;
 		height:30vh;
