--- a/Css/style.css
+++ b/Css/style.css
@@ -292,7 +292,8 @@ h6 {
   box-shadow: 0px 0px 4px 0px rgb(209, 196, 179);
 }
 
-#btn {
+#btn,
+#btnUp {
   border-radius: 23px;
   color: rgb(201, 233, 222);
   font-family: 'Open Sans';
@@ -300,7 +301,8 @@ h6 {
   margin-top: 2px;
 }
 
-#btn:hover {
+#btn,
+#btnUp:hover {
   border: 2px solid white;
   background-color: #304b78;
 }
@@ -308,6 +310,13 @@ h6 {
 .icon-modify {
   color: #7f8c8d;
   padding: 0 5px;
+}
+
+.icon2 {
+  color: rgb(255, 35, 35);
+  font-size: 20px;
+  margin-top: -80px;
+  font-weight: bold;
 }
 
 .create {
@@ -320,4 +329,21 @@ h6 {
   margin-top: -40px;
   margin-left: -40px;
   width: 400px;
+}
+
+.form2 {
+  top: 2vh;
+  position: absolute;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px #000;
+  width: 400px;
+}
+
+.obsPassword {
+  font-weight: bold;
+  font-size: 12px;
+  text-shadow: 0px 0px 1px black;
+  list-style-type: circle;
 }
