--- a/Css/style.css
+++ b/Css/style.css
@@ -119,6 +119,7 @@ h6 {
     height: auto;
     text-align: center;
   }
+
   .Itens_Base_Search {
     border-style: solid;
     border-color: #39a7b5;
@@ -127,9 +128,10 @@ h6 {
     margin-bottom: 10px;
     margin-right: 2%;
     margin-left: 5%;
-    max-width: 90%;
+    max-width: 79%;
     text-align: center;
   }
+
   .Itens_Base_Search .Item_Pic {
     position: relative;
     display: inline-block;
@@ -283,7 +285,6 @@ h6 {
     width: 47vw;
   }
   .Product .Product_Info {
-    float: left;
     margin-left: 1vw;
     margin-right: 1vw;
     margin-bottom: 3vh;
@@ -305,12 +306,13 @@ h6 {
   }
 }
 .Text {
-  font-size: 1.3vh;
+  font-size: 1.2vh;
+  text-align:left;
   visibility: hidden;
   position: absolute;
   padding: 10px;
   color: white;
-  top: 50%;
+  top: 40%;
   left: 0;
   opacity: 0;
   transition: opacity 0.2s linear;
