--- a/Css/style.css
+++ b/Css/style.css
@@ -90,14 +90,14 @@ h6 {
 .Buy {
   margin-left: 40%;
 }
-.Account_Part{  
-    margin-left:12%;
-  }
+.Account_Part {
+  margin-left: 12%;
+}
 
 /*Display For Phone*/
 @media only screen and (min-width: 0px) and (max-width: 785px) {
-.Login_Part{
-    margin-left:14vw;
+  .Login_Part {
+    margin-left: 14vw;
   }
   .Responsive_pic {
     max-width: 16vw;
@@ -200,8 +200,8 @@ h6 {
 /*Display For Pc*/
 
 @media only screen and (min-width: 786px) {
-  .Login_Part{
-    margin-left:5vw;
+  .Login_Part {
+    margin-left: 5vw;
   }
   .Responsive_pic {
     max-width: 10vw;
@@ -307,7 +307,7 @@ h6 {
 }
 .Text {
   font-size: 1.2vh;
-  text-align:left;
+  text-align: left;
   visibility: hidden;
   position: absolute;
   padding: 10px;
@@ -341,16 +341,16 @@ h6 {
   box-shadow: 0px 0px 4px 0px rgb(209, 196, 179);
 }
 
-#btn,
+#Login,
 #btnUp {
-  border-radius: 23px;
+  border-radius: 50px;
   color: rgb(201, 233, 222);
   font-family: 'Open Sans';
   font-weight: bold;
   margin-top: 2px;
 }
 
-#btn:hover {
+#Login:hover {
   border: 2px solid white;
   background-color: #304b78;
 }
@@ -399,4 +399,8 @@ h6 {
   font-size: 12px;
   text-shadow: 0px 0px 1px black;
   list-style-type: circle;
+}
+
+#Login {
+  border-radius: 5px;
 }
