--- a/Css/style.css
+++ b/Css/style.css
@@ -92,7 +92,7 @@ h6 {
   margin-left: 40%;
 }
 .Account_Part {
-  margin-left: 12%;
+  margin-left: -20%;
 }
 
 /*Display For Phone*/
@@ -208,12 +208,19 @@ h6 {
     height: 24vh;
   }
 }
+
+.Account_Part {
+  margin-left: -90%;
+  margin-top: 20%;
+}
+
 /*Display For Pc*/
 
 @media only screen and (min-width: 786px) {
   .Login_Part {
     margin-left: 5vw;
   }
+
   .Page {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -358,6 +365,11 @@ h6 {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.Account_Part {
+  margin-left: -22%;
+  justify-content: center;
+}
+
 .form {
   top: 25vh;
   position: absolute;
@@ -444,106 +456,103 @@ h6 {
   border-radius: 5px;
 }
 
-.myFooter{
-    padding-top:32px;
+.myFooter {
+  padding-top: 32px;
 }
 
-.myFooter .container{
-    text-align: center;
-    font-weight: bold;
-    text-transform: capitalize;
-    font-family: 'Open Sans';
-    text-shadow: 0px 0px 1px rgb(35, 137, 221);
+.myFooter .container {
+  text-align: center;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-family: 'Open Sans';
+  text-shadow: 0px 0px 1px rgb(35, 137, 221);
 }
 
-.myFooter .footer-copyright{
-    margin-bottom: 35px;
-    text-align: center;
-   color:rgb(20, 20, 22);
+.myFooter .footer-copyright {
+  margin-bottom: 35px;
+  text-align: center;
+  color: rgb(20, 20, 22);
 }
 
-.myFooter ul{
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 18px;
+.myFooter ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 18px;
 }
 
-.myFooter a{
-    color: #282b2d;
-    font-size: 18px;
+.myFooter a {
+  color: #282b2d;
+  font-size: 18px;
 }
 
-.myFooter li{
-    display: inline-block;
-    margin: 0px 15px;
-    line-height: 2;
+.myFooter li {
+  display: inline-block;
+  margin: 0px 15px;
+  line-height: 2;
 }
 
-.myFooter .footer-social{
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color:rgb(183, 236, 236);
-    border-radius:20px;
+.myFooter .footer-social {
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: rgb(183, 236, 236);
+  border-radius: 20px;
 }
 
-.myFooter .fa{
-    font-size: 36px;
-    margin-right: 15px;
-    margin-left: 20px;
-    background-color: white;
-    color: #d0d0d0;
-    border-radius: 51%;
-    padding: 10px;
-    height: 60px;
-    width: 60px;
-    text-align: center;
-    line-height: 43px;
-    text-decoration: none;
-    transition:color 0.2s;
+.myFooter .fa {
+  font-size: 36px;
+  margin-right: 15px;
+  margin-left: 20px;
+  background-color: white;
+  color: #d0d0d0;
+  border-radius: 51%;
+  padding: 10px;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  line-height: 43px;
+  text-decoration: none;
+  transition: color 0.2s;
 }
 
-.myFooter .fal{
-  color:yellow;
+.myFooter .fal {
+  color: yellow;
 }
-.myFooter .fa-facebook:hover{
-   color: #2b55ff;
-}
-
-.myFooter .fa-facebook:focus{
-    color: #2b55ff; 
+.myFooter .fa-facebook:hover {
+  color: #2b55ff;
 }
 
-.myFooter .fa-instagram:hover{
-    color:purple;
+.myFooter .fa-facebook:focus {
+  color: #2b55ff;
 }
 
-.myFooter .fa-instagram:focus{
-    color:purple;
-}
-.myFooter .fa-youtube:hover{
-    color:red;
+.myFooter .fa-instagram:hover {
+  color: purple;
 }
 
-.myFooter .fa-youtube:focus{
-    color:red;
+.myFooter .fa-instagram:focus {
+  color: purple;
+}
+.myFooter .fa-youtube:hover {
+  color: red;
 }
 
-.myFooter .fa-twitter:hover{
-    color: #00aced;
-
+.myFooter .fa-youtube:focus {
+  color: red;
 }
 
-.myFooter .fa-twitter:focus{
-    color:#00aced;
+.myFooter .fa-twitter:hover {
+  color: #00aced;
 }
 
-.myFooter .fa-envelope:hover{
-    color: red;
-
+.myFooter .fa-twitter:focus {
+  color: #00aced;
 }
 
-.myFooter .fa-envelope:focus{
-    color:red;
+.myFooter .fa-envelope:hover {
+  color: red;
 }
 
+.myFooter .fa-envelope:focus {
+  color: red;
+}
