--- a/Css/style.css
+++ b/Css/style.css
@@ -207,11 +207,13 @@ h6 {
     margin-top: 10%;
     height: 24vh;
   }
-}
 
-.Account_Part {
-  margin-left: -90%;
-  margin-top: 20%;
+  .Account_Part {
+    margin-left: -90%;
+    margin-top: 20%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 /*Display For Pc*/
